Document vertical alignment utility classes, fixes #529

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -87,3 +87,41 @@
   border: 1px solid #ccc;
   box-shadow: 0 4px 10px rgba(#000, 0.25);
 }
+
+.docs-example-valign {
+  > div {
+    width: 33%;
+    padding: 1rem;
+    color: white;
+
+    &:nth-child(1) {
+      background: #B2685C;
+    }
+    &:nth-child(2) {
+      background: #87B286;
+    }
+    &:nth-child(3) {
+      background: #87A1B2;
+      height: 200px;
+    }
+  }
+}
+
+.docs-example-valign-2 {
+  justify-content: space-around;
+
+  > div {
+    width: 45%;
+    padding: 1rem;
+    color: white;
+
+    &:nth-child(1) {
+      background: #B2685C;
+      height: 75px;
+    }
+    &:nth-child(2) {
+      background: #87B286;
+      height: 200px;
+    }
+  }
+}
